--- a/scss/_fixside.scss
+++ b/scss/_fixside.scss
@@ -66,7 +66,8 @@
     .search {
         width: 300px;
         height: 60px;
-        background: #eaedf4;
+        background: linear-gradient(to top,#272727 0%,#434343);
+        border: solid 1px #327e1a;
         border-radius: 3px 0px 0px 3px;
         position: absolute;
         top: 0px;
@@ -76,6 +77,7 @@
         
         &.open {
             left: -240px;
+            background: #414141;
         }
 
         .searchbut {
@@ -87,10 +89,10 @@
             text-align: center;
 
             &:hover,&:active,&.active {
-                background: linear-gradient(to right, #7f8cd1 0%, #1a2b84 100%);
+                background: linear-gradient(to bottom, #33ab0a 0%, #68e73c 100%);
 
                 span {
-                    color: #fff;
+                    color: #131313;
                 }
 
                 .fixsideimg {
@@ -100,32 +102,38 @@
 
             span {
                 font-size: 13px;
+                color: #c8c8c8;
             }
 
             .fixsideimg {
                 width: 30px;
                 height: 30px;
-                background: url('../images/fixside_ic.png');
-                background-size: 900%;
+                background: url('../images/fixside_ic2.png');
+                background-size: 500%;
                 float: left;
                 margin: 7px 15px 3px 14px;
+                pointer-events: none;
             }
 
         }
+
         input {
             width: 140px;
             height: 30px;
             font-size: 16px;
             padding-left: 10px;
-            box-shadow: inset 0 0 2px 2px #c6cae0;
-            border: none;
-            border-radius: 15px;
+            box-shadow: 0 -3 2px 0px #1f1f1f inset;
+            border: solid 1px #5d5d5d;
+            border-top: none;
+            border-radius: 3px;
             float: left;
             margin: 15px 0px 0px 10px;
+            background: linear-gradient(to bottom,#303030 21%,#424242 100%);
+            color: #898787;
 
             &::placeholder {
                 font-weight: bold;
-                color: #cacaca;
+                color: #898787;
                 font-size: 14px;
             }
         }
@@ -133,15 +141,17 @@
         button {
             width: 50px;
             height: 28px;
-            background: linear-gradient(to bottom, #8f9cdc 0%, #3247b8 100%);;
-            color: #fff;
+            background: #2b2b2b;
+            border: solid 1px #34aa0d;
+            color: #42c317;
             float: left;
             border-radius: 5px;
             font-size: 16px;
             margin: 16px 0px 16px 15px;
 
             &:hover,&:active,&.active {
-                background: linear-gradient(to top, #8f9cdc 0%, #3247b8 100%);
+                color: #2b2b2b;
+                background: #34aa0d;
             }
         }
 
@@ -161,29 +171,37 @@
                 padding-left: 20px;
                 position: relative;
                 font-size: 14px;
-                background: linear-gradient(to bottom, #ffffff 0%, #d5d9ef 100%);
+                background: linear-gradient(to top, #393939 0%, #555555 100%);
                 cursor: pointer;
+                color: #dadada;
+                border-bottom: solid 1px #6c6c6c;
 
                 &::before {
                     content: "";
-                    width: 6px;
-                    height: 8px;
+                    width: 0px;
+                    height: 0px;
                     position: absolute;
-                    background: url('../images/arrow_b.png');
+                    border-style: solid;
+                    border-color: #b2b2b2 transparent;
+                    border-width: 10px 8px 0px 8px;
                     right: 40px;
                     top: 21px;
+                    transform: rotate(-90deg);
+                    transition: 0.3s all;
                 }
 
                 &:hover,&:active,&.active {
-                    background: linear-gradient(to bottom, #fafbff 0%, #abe6ec 100%);
+                    background: linear-gradient(to bottom, #2d2d2d 0%, #393939 100%);
+                    color: #dadada;
 
                     &::before {
-                        transform: rotate(90deg);
+                        transform: rotate(0deg);
                     }
                 }
             }
+
             div {
-                background: #fff;
+                background: #2c2c2c;
                 width: 100%;
                 height: 0px;
                 overflow: hidden;
@@ -197,16 +215,13 @@
                     width: 100%;
                     height: 50px;
                     line-height: 50px;
-                    color: #000;
-                    border-bottom: solid 1px #4d515d;
+                    color: #b9b9b9;
+                    border-bottom: solid 1px #8c8c8c;
                     font-size: 14px;
 
-                    &:last-child {
-                        border: none;
-                    }
-
                     &:hover,&:active,&.active {
-                        text-decoration: underline;
+                        background: #212121;
+                        color: #53ca2a;
                     }
 
                     .team {
@@ -240,11 +255,9 @@
     .fun {
         width: 60px;
         height: auto;
-        margin-top: 62px;
-        border-radius: 3px 0px 0px 3px;
+        margin-top: 65px;
         position: relative;
         transition: all 0.3s;
-        overflow: hidden;
 
         //漢堡選單
         .hamBtn {
@@ -284,33 +297,38 @@
         a {
             display: block;
             width: 100%;
-            height: 70px;
-            background: #eaedf4;
+            height: 62px;
+            background: linear-gradient(to top,#272727 0%,#434343 100%);
+            border-radius: 3px 0px 0px 3px;
             text-align: center;
+            margin-top: 3px;
+            border: solid 1px #327e1a;
             cursor: pointer;
-            &:last-child {
-                height: 75px;
-            }
+
             &:hover,&:active,&.active {
-                background: linear-gradient(to right, #7f8cd1 0%, #1a2b84 100%);
+                background: linear-gradient(to bottom, #33ab0a 0%, #68e73c 100%);
+
                 span {
-                    color: #fff;
+                    color: #131313;
                 }
+
                 .fixsideimg {
-                    background-position-y: -30px;
+                    background-position-y: 100%;
                 }
             }
+
             span {
                 font-size: 13px;
-                color: #000;
+                color: #d0d0d0;
             }
+
             .fixsideimg {
                 width: 30px;
                 height: 30px;
-                background: url('../images/fixside_ic.png');
-                background-size: 900%;
+                background: url('../images/fixside_ic2.png');
+                background-size: 500%;
                 float: left;
-                margin: 13px 15px 3px 17px;
+                margin: 8px 15px 3px 17px;
                 &.img2 {
                     background-position-x: -30px;
                 }
@@ -321,19 +339,19 @@
                     background-position-x: -90px;
                 }
                 &.img5 {
-                    background-position-x: -120px;
+                    background-position-x: 50%;
                 }
                 &.img6 {
-                    background-position-x: -150px;
+                    background-position-x: 75%;
                 }
                 &.img7 {
-                    background-position-x: -180px;
+                    background-position-x: 100%;
                 }
                 &.img8 {
                     background-position-x: -210px;
                 }
                 &.img9 {
-                    background-position-x: -240px;
+                    background-position-x: 25%;
                 }
             }
         }
