--- a/scss/_fixside.scss
+++ b/scss/_fixside.scss
@@ -122,7 +122,7 @@
             height: 30px;
             font-size: 16px;
             padding-left: 10px;
-            box-shadow: 0 -3 2px 0px #1f1f1f inset;
+            box-shadow: 0px 3px 10px 2px #1f1f1f inset;
             border: solid 1px #5d5d5d;
             border-top: none;
             border-radius: 3px;
